# IPO4ICSE

tawos/: .env.example  .gitignore  README.md  config.toml  example.config.toml  pyproject.toml  requirements.md  requirements.txt  run_experiment.sh  setup.sh  start_models.sh  todo.md
tawos/src/: config_loader.py  main.py
tawos/src/core/: base_classifier.py  benchmark.py  claude_classifier.py  converter.py  data_cleaning.py  db_check.py  export.py  gemini_classifier.py  local_model_classifier.py  local_model_cleaner.py  log.py  openai_classifier.py  own_metrics_classifier.py
tawos/src/utils/: file_reading.py
