[project]
name = "tawos"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.9"

keywords = []

classifiers = [
]

dependencies = [
    "aiohttp>=3.13.2",
    "cryptography>=46.0.3",
    "dotenv>=0.9.9",
    "pandas>=2.3.3",
    "pymysql>=1.1.2",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.44",
]

[project.urls]
Homepage = ""
Repository = ""
Issues = ""

[project.optional-dependencies]

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[tool.hatch.build.targets.wheel]
include = ["src"]

[dependency-groups]
dev = [
    "setuptools>=80.1.0, <81.0.0",
    "pylint>=3.0.4, <4.0.0",
    "pytest>=8.0.2, <9.0.0",
    "yapf>=0.43.0",
    "pytest-cov>=6.0.0, <7.0.0",
]

[project.scripts]
